<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Effective English</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create account</string>
    <string name="login_with_account">Login With Account</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_password2">Forgot your password</string>
    <string name="or_sign_in_with">Or sign in with </string>
    <string name="navigation_home">Home</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_setting">Setting</string>
    <string name="navigation_profile">Profile</string>
    <string name="subject_learning">Subject Learning</string>
    <string name="vietnamese">Vietnamese - English</string>
    <string name="history">History</string>
    <string name="listening">Listening</string>
    <string name="writing">Writing</string>
    <string name="testing">Testing</string>
    <string name="competition">Competition</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="logout">Sign out</string>
    <string name="data_syncing">Data Syncing...</string>
    <string name="setting_notification">Notification Setting</string>
    <string name="favorite">Favorite</string>
    <string name="remembered">Remembered</string>
    <string name="word_reminder_enabled">Word Reminder Enabled</string>
    <string name="number_of_words">Number of Words</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="select_type">Select Type</string>
    <string name="no_result_found">No result found</string>
    <string name="vietnamese_english">Vietnamese - English</string>
    <string name="connected_word">Connected Word</string>
    <string name="history_show_more">Show more</string>
    <string name="history_show_less">Show less</string>
    <string name="history_time">Time</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_fullname">Please enter your name</string>
    <string name="reset_password">Reset Password</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must be more than 8 characters including alphabet and number</string>
    <string name="save">Save</string>
    <string name="scan_with_camera">Scan With Camera</string>
    <string name="scanned_word">Scanned Words</string>
    <string name="create_room">Create room</string>
    <string name="room_name">Room name</string>
    <string name="num_of_players">Number of players</string>
    <string name="num_of_players2">No. players</string>
    <string name="time_answer">Time to answer (s)</string>
    <string name="create">Create</string>
    <string name="creator">Creator</string>
    <string name="player_list">Player list</string>
    <string name="room_list">Room list</string>
    <string name="subject_list">Subject list</string>
    <string name="word_connected">Word Connected Game</string>
    <string name="look_up_camera">Look Up With Camera</string>
    <string name="look_up">Look up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Full name</string>
    <string name="play_time" >Play time</string>
    <string name="rank" >July\'s Rank</string>
    <string name="room_status_playing">Playing</string>
    <string name="room_status_waiting">Waiting</string>
    <string name="order_player">Player order</string>
    <string name="more">More...</string>
    <string name="game_history">Game history</string>
    <string name="VI_EN_title">VIE - ENG</string>
    <string name="date">Date</string>
    <string name="room_name_history">Room name:</string>
    <string name="date_history">Date:</string>
    <string name="history_game">Game history</string>
    <string name="top_player">Top player</string>
    <string name="kicked">You have been kicked</string>
</resources>
