<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RoomInfoActivity"
    android:orientation="vertical"
    android:background="@drawable/main_background_gradient">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarRoomInfo"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#03A9F4">
            </androidx.appcompat.widget.Toolbar>
            <TextView
                android:id="@+id/room_info_title_txt"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        app:cardElevation="5dp"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="5"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/creator"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txt_room_info_owner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Adam"
                    android:textSize="20sp"
                    android:layout_weight="2"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="5"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewNumOfPlayers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textStyle="bold"
                    android:text="@string/num_of_players"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txt_room_info_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textSize="20sp"
                    android:layout_weight="2"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="5"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textStyle="bold"
                    android:text="@string/play_time"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txt_room_info_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:textSize="20sp"
                    android:layout_weight="2"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        app:cardElevation="5dp"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Player list"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"
                android:layout_marginHorizontal="10dp"/>
            <ListView
                android:id="@+id/listViewPlayer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/start"
        android:id="@+id/buttonStartGame"
        android:backgroundTint="@color/colorBlue"/>


</LinearLayout>