<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="#FA0000"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Widget.EditBox">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Email"
            style="@style/Widget.TextView"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_text_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            style="@style/Widget.TextInputLayout"
            android:hint="Email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Widget.EditBox">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/Widget.TextView"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:errorEnabled="true"
            style="@style/Widget.TextInputLayout"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/register_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/login_with_account"></com.google.android.material.button.MaterialButton>

<!--    <com.google.android.material.button.MaterialButton-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="10dp"-->
<!--        android:text="@string/login_with_google"-->
<!--        app:icon="@drawable/google_icon"-->
<!--        app:iconGravity="end"-->
<!--        app:iconSize="20dp"></com.google.android.material.button.MaterialButton>-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="10dp"-->
<!--        android:text="@string/login_with_facebook"-->
<!--        app:icon="@drawable/facebook_icon"-->
<!--        app:iconGravity="end"-->
<!--        app:iconSize="20dp"></com.google.android.material.button.MaterialButton>-->


</LinearLayout>